# json-orm

./: .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  FEATURES.md  LICENSE.txt  MANIFEST.in  Makefile  NOTES.md  README.md  example.json  example.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-delete-branch.yml  branch-protection.yml
.output/: example.json  example.py
.output/hidden/: defination.jsd  schema.jsd
.output/hidden/chunks/: chunk_01.jsd
Docs/internal/: NOTES.md
benchmarks/: benchmark_storage.py
changelogs/: CHANGELOG.md
json_orm/engine/: execution.py  planner.py
json_orm/model/: database.py
json_orm/security/: sanitizer.py
json_orm/sql/: builder.py  parameters.py
json_orm/sql/clause/: base.py  select.py
json_orm/sql/processor/: chain.py
json_orm/sql/statement/: base.py
json_orm/storage/: __init__.py  jsd.py
jsondb/: __init__.py  conditions.py  database.py  index.py  model.py  query.py  relationships.py  storage.py
jsondb/engine/: execution.py  expressions.py  interfaces.py  optimizer.py  planner.py
jsondb/model/: database.py  model.py
jsondb/security/: context.py  sanitizer.py  validator.py
jsondb/sql/: builder.py  clauses.py  context.py  expressions.py  parameters.py  parser.py
jsondb/sql/clause/: base.py  select.py
jsondb/sql/processor/: chain.py
jsondb/sql/statement/: base.py  select.py
jsondb/storage/: __init__.py
requirements/: deps.txt  dev.txt  test.txt
scripts/: requirements.txt  smart_commit.py
scripts/release/: changelog.py  push-feature.sh  release.py  simple_changelog.py  simple_release.py  update_version.py
tests/: test_jsd.py
