[tool.poetry]
name = "jsondb"
version = "0.1.0"
description = ""
authors = ["alaamer12 <ahmedmuhmmed239@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alaamer12/pyjsondb"
repository = "https://github.com/alaamer12/pyjsondb"
documentation = "https://jsondb.readthedocs.io/en/latest/"
keywords = []
classifiers = [
]
packages = [
    { include = "jsondb" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
twine = "^5.1.1"
setuptools = ">=75.3.0,<75.4.0"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^2.5.0"
myst-parser = "^4.0.0"
sphinx-rtd-dark-mode = "^1.2.4"
sphinx-copybutton = "^0.5.2"
sphinx-design = ">=0.5.0"
sphinx-tabs = "^3.4.7"
sphinx-togglebutton = "^0.3.2"
sphinxcontrib-mermaid = "^1.0.0"
sphinx-notfound-page = "^1.0.4"
sphinx-last-updated-by-git = "^0.3.8"
sphinx-sitemap = "^2.6.0"
sphinxcontrib-spelling = "^8.0.1"
sphinx-version-warning = "^1.1.2"
sphinxext-opengraph = "^0.9.1"

[build-system]
requires = ["poetry-core >=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
asyncio_default_fixture_loop_scope = "function"